--- a/.github/workflows/Aria2 Build.yml
+++ b/.github/workflows/Aria2 Build.yml
@@ -52,7 +52,7 @@ jobs:
         C_ARES=https://github.com/c-ares/c-ares/releases/download/$(getversion c-ares/c-ares)/$(echo "$(getversion c-ares/c-ares)" | head -n 1 | sed 's/_/./g' | sed 's/ca/c-a/g').tar.gz
         EXPAT=https://github.com/libexpat/libexpat/releases/download/$(getversion libexpat/libexpat)/expat-$(echo "$(getversion libexpat/libexpat)" | head -n 1 | sed 's/_/./g' | sed 's/R.//g').tar.bz2
         LIBSSH2=https://github.com/libssh2/libssh2/releases/download/$(getversion libssh2/libssh2)/$(getversion libssh2/libssh2).tar.gz
-        OPENSSL=https://www.openssl.org/source/$(curl -fsSL https://www.openssl.org/source/ | grep -o '"openssl-[0-9].*.tar.gz"' | head -n 1 | sed 's/"//g')
+        OPENSSL=https://www.openssl.org/source/$(curl -fsSL https://www.openssl.org/source/ | grep -o '"openssl-1.*.tar.gz"' | head -n 1 | sed 's/"//g')
         SQLITE3=https://sqlite.org/$(curl -fsSL https://sqlite.org/download.html | grep -o '..../sqlite-autoconf-.*.tar.gz' | head -n 1)
         echo "======================="
         echo "Aria2 $ARIA2_VER"
