--- a/.github/workflows/Aria2 Build.yml
+++ b/.github/workflows/Aria2 Build.yml
@@ -44,16 +44,13 @@ jobs:
         ZLIB: https://sourceforge.net/projects/libpng/files/zlib/1.2.11/zlib-1.2.11.tar.gz
         GITHUB_REPO: jsda/aria2-builder
       run: |
-        getversion(){
-        curl -fsSL https://api.github.com/repos/$1/releases | grep -o '"tag_name": ".*"' | head -n 1 | sed 's/"//g;s/v//g' | sed 's/tag_name: //g' | sed 's/release-//g'
-        }
         echo "======================="
         ARIA2_VER=$(getversion aria2/aria2)
-        C_ARES=https://github.com/c-ares/c-ares/releases/download/$(getversion c-ares/c-ares)/$(echo "$(getversion c-ares/c-ares)" | head -n 1 | sed 's/_/./g' | sed 's/ca/c-a/g').tar.gz
-        EXPAT=https://github.com/libexpat/libexpat/releases/download/$(getversion libexpat/libexpat)/expat-$(echo "$(getversion libexpat/libexpat)" | head -n 1 | sed 's/_/./g' | sed 's/R.//g').tar.bz2
-        LIBSSH2=https://github.com/libssh2/libssh2/releases/download/$(getversion libssh2/libssh2)/$(getversion libssh2/libssh2).tar.gz
-        OPENSSL=https://www.openssl.org/source/$(curl -fsSL https://www.openssl.org/source/ | grep -o '"openssl-1.*.tar.gz"' | head -n 1 | sed 's/"//g')
-        SQLITE3=https://sqlite.org/$(curl -fsSL https://sqlite.org/download.html | grep -o '..../sqlite-autoconf-.*.tar.gz' | head -n 1)
+        C_ARES="https://github.com/c-ares/c-ares/releases/download/$(curl -fsSL https://api.github.com/repos/c-ares/c-ares/releases | grep -o '"tag_name": ".*"' | head -n 1 | sed 's/"//g;s/v//g' | sed 's/tag_name: //g' | sed 's/release-//g')/$(echo "$(curl -fsSL https://api.github.com/repos/c-ares/c-ares/releases | grep -o '"tag_name": ".*"' | head -n 1 | sed 's/"//g;s/v//g' | sed 's/tag_name: //g' | sed 's/release-//g')" | head -n 1 | sed 's/_/./g' | sed 's/ca/c-a/g').tar.gz"
+        EXPAT="https://github.com/libexpat/libexpat/releases/download/$(curl -fsSL https://api.github.com/repos/libexpat/libexpat/releases | grep -o '"tag_name": ".*"' | head -n 1 | sed 's/"//g;s/v//g' | sed 's/tag_name: //g' | sed 's/release-//g')/expat-$(echo "$(curl -fsSL https://api.github.com/repos/libexpat/libexpat/releases | grep -o '"tag_name": ".*"' | head -n 1 | sed 's/"//g;s/v//g' | sed 's/tag_name: //g' | sed 's/release-//g')" | head -n 1 | sed 's/_/./g' | sed 's/R.//g').tar.bz2"
+        LIBSSH2="https://github.com/libssh2/libssh2/releases/download/$(curl -fsSL https://api.github.com/repos/libssh2/libssh2/releases | grep -o '"tag_name": ".*"' | head -n 1 | sed 's/"//g;s/v//g' | sed 's/tag_name: //g' | sed 's/release-//g')/$(curl -fsSL https://api.github.com/repos/libssh2/libssh2/releases | grep -o '"tag_name": ".*"' | head -n 1 | sed 's/"//g;s/v//g' | sed 's/tag_name: //g' | sed 's/release-//g').tar.gz"
+        OPENSSL="https://www.openssl.org/source/$(curl -fsSL https://www.openssl.org/source/ | grep -o '"openssl-1.*.tar.gz"' | head -n 1 | sed 's/"//g')"
+        SQLITE3="https://sqlite.org/$(curl -fsSL https://sqlite.org/download.html | grep -o '..../sqlite-autoconf-.*.tar.gz' | head -n 1)"
         echo "======================="
         echo "Aria2 $ARIA2_VER"
         echo "$PROFILE"
