--- a/.github/workflows/Aria2 Build.yml
+++ b/.github/workflows/Aria2 Build.yml
@@ -54,13 +54,13 @@ jobs:
         LIBSSH2=https://github.com/libssh2/libssh2/releases/download/$(getversion libssh2/libssh2)/$(getversion libssh2/libssh2).tar.gz
         OPENSSL=https://www.openssl.org/source/$(curl -fsSL https://www.openssl.org/source/ | grep -o '"openssl-1.*.tar.gz"' | head -n 1 | sed 's/"//g')
         SQLITE3=https://sqlite.org/$(curl -fsSL https://sqlite.org/download.html | grep -o '..../sqlite-autoconf-.*.tar.gz' | head -n 1)
-        ARIA2_VER=$ARIA2_VER
-        C_ARES=$C_ARES
-        EXPAT=$EXPAT
-        LIBSSH2=$LIBSSH2
-        OPENSSL=$OPENSSL
-        SQLITE3=$SQLITE3
-        ZLIB=$ZLIB
+
+
+
+
+
+
+
         echo "======================="
         echo "Aria2 $ARIA2_VER"
         echo "$PROFILE"
@@ -80,13 +80,13 @@ jobs:
         docker build \
           --build-arg BUILDER_IMAGE \
           --build-arg BUILD_SCRIPT \
-          --build-arg ARIA2_VER \
-          --build-arg ZLIB \
-          --build-arg EXPAT \
-          --build-arg C_ARES \
-          --build-arg OPENSSL \
-          --build-arg SQLITE3 \
-          --build-arg LIBSSH2 \
+          --build-arg ARIA2_VER=$ARIA2_VER \
+          --build-arg C_ARES=$C_ARES \
+          --build-arg EXPAT=$EXPAT \
+          --build-arg LIBSSH2=$LIBSSH2 \
+          --build-arg OPENSSL=$OPENSSL \
+          --build-arg SQLITE3=$SQLITE3 \
+          --build-arg ZLIB=$ZLIB \
           --platform=local \
           -o ./output .
         cd output
