--- a/.github/workflows/Aria2 Build.yml
+++ b/.github/workflows/Aria2 Build.yml
@@ -1,14 +1,14 @@
 name: Aria2 Build
 on:
-  release:
-    types: [published]
+#  release:
+#    types: [published]
 #  push:
 #    branches:
 #      - master
 #    paths:
 #      - 'diy.sh'
-#  schedule:
-#    - cron: '30 0 1 * *'
+  schedule:
+    - cron: 0 3 3 * *
 #  watch:
 #    types: [started]
 
@@ -89,7 +89,7 @@ jobs:
         echo "## ARIA2 HASH SHA512" > README.md
         echo "$(sha512sum aria2c*)" >> README.md
         sed -i "s/aria2c*/aria2-$PROFILE/g" README.md
-        zip -9 -r aria2-$ARIA2_VER-$PROFILE.zip aria2c* README.md
+        zip -9 -r aria2-$PROFILE.zip aria2c* README.md
         rm -rf aria2c*
         echo "======================="
         echo "======================="
