--- a/.github/workflows/Aria2 Build.yml
+++ b/.github/workflows/Aria2 Build.yml
@@ -9,8 +9,8 @@ on:
 #      - 'diy.sh'
   schedule:
     - cron: 0 3 3 * *
-#  watch:
-#    types: [started]
+  watch:
+    types: [started]
 
 jobs:
   build:
