--- a/.github/workflows/up.yml
+++ b/.github/workflows/up.yml
@@ -33,5 +33,6 @@ jobs:
         ARIA2_VER=$(grep 'ARIA2_VER=' $GITHUB_WORKSPACE/dependences | cut -d'=' -f2)
         git config --global user.email "actions@github.com"
         git config --global user.name "actions"
-      	git add . && git commit -m "$ARIA2_VER-$(date "+%Y%m%d")"
+      	git add .
+      	git commit -m "$ARIA2_VER-$(date "+%Y%m%d")"
       	git push && echo "更新完毕!!!" >> $GITHUB_STEP_SUMMARY || echo "暂无更新!!!" >> $GITHUB_STEP_SUMMARY
