--- a/.github/workflows/up.yml
+++ b/.github/workflows/up.yml
@@ -27,7 +27,7 @@ jobs:
         fetch-depth: 0
         lfs: true
 
-    - name: Sync Packages
+    - name: Set git identity
       run: |
         git config --global user.email "actions@github.com"
         git config --global user.name "actions"
