--- a/.github/workflows/aria2-builer.yml
+++ b/.github/workflows/aria2-builer.yml
@@ -85,6 +85,7 @@ jobs:
 
     - name: Upload
       if: success()
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         cd output
         git init
@@ -92,7 +93,7 @@ jobs:
         git config user.email "actions@github.com"
         git add .
         git commit -m "$ARIA2_VER-$(date "+%Y%m%d")"
-        git push --force --quiet origin HEAD:${{ matrix.PLATFORMS }}
+        git push --force --quiet "https://$GITHUB_TOKEN@github.com/$GITHUB_REPO.git" HEAD:${{ matrix.PLATFORMS }}
 
     - name: Functional Testing
       run: |
