--- a/.github/workflows/aria2-builer.yml
+++ b/.github/workflows/aria2-builer.yml
@@ -86,7 +86,7 @@ jobs:
     - name: Upload
       if: success()
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.TOKEN }}
       run: |
         cd output
         git init
