--- a/.github/workflows/aria2-builer.yml
+++ b/.github/workflows/aria2-builer.yml
@@ -13,7 +13,7 @@ on:
   workflow_dispatch:
   push:
     paths:
-      - 'dependences'
+      - '*dependences*'
 #  schedule:
 #    - cron: 0 3 3 * *
 
