--- a/.github/workflows/aria2-builer.yml
+++ b/.github/workflows/aria2-builer.yml
@@ -11,11 +11,11 @@ name: Aria2 Builder
 
 on:
   workflow_dispatch:
-  push:
-    paths:
-      - '*dependences*'
-  schedule:
-    - cron: 10 2 * * 5
+#  push:
+#    paths:
+#      - '*dependences*'
+#  schedule:
+#    - cron: 15 2 * * 5
 
 env:
   GITHUB_REPO: jsda/aria2-builder
