--- a/.github/workflows/aria2_builer.yml
+++ b/.github/workflows/aria2_builer.yml
@@ -11,7 +11,10 @@ name: Aria2 Builder
 
 on:
   workflow_dispatch:
-  workflow_call:
+  workflow_run:
+    workflows: ["Merge-upstream"]
+    types:
+      - completed
 #  push:
 #    paths:
 #      - '*dependences*'
