--- a/.github/workflows/up.yml
+++ b/.github/workflows/up.yml
@@ -32,8 +32,9 @@ jobs:
         git config --global user.email "actions@github.com"
         git config --global user.name "actions"
         ARIA2_VER=$(grep 'ARIA2_VER=' $GITHUB_WORKSPACE/dependences | cut -d'=' -f2)
-        git add . && git commit -m "$ARIA2_VER-$(date "+%Y%m%d")" && git push && echo "up=true" >> $GITHUB_OUTPUT || echo "up=false" >> $GITHUB_OUTPUT
+        git add . && git commit -m "$ARIA2_VER-$(date "+%Y%m%d")" && git push && echo "up=true" >> $GITHUB_ENV || echo "up=false" >> $GITHUB_ENV
 
     - name: Compare files
-      if: ${{ steps.update.outputs.up != 'false' }}
-      uses: ./.github/workflows/aria2_builer.yml
+      if: ${{ env.up != 'false' }}
+      run: |
+        echo "true"
