--- a/.github/workflows/aria2_builer.yml
+++ b/.github/workflows/aria2_builer.yml
@@ -14,7 +14,7 @@ on:
   workflow_run:
     workflows: ["Merge-upstream"]
     types:
-      - completed
+      - success
 #  push:
 #    paths:
 #      - '*dependences*'
