--- a/.github/workflows/up.yml
+++ b/.github/workflows/up.yml
@@ -11,13 +11,15 @@ name: Merge-upstream
 on:
   workflow_dispatch:
   schedule:
-    - cron: 10 2 * * 5
+    - cron: 5 9 * * 5
 
 jobs:
   merge:
+
     runs-on: ubuntu-latest
 
     steps:
+
     - name: Checkout
       uses: actions/checkout@master
       with:
@@ -26,16 +28,9 @@ jobs:
         lfs: true
 
     - name: Update
-      id: update
       run: |
         ./up.sh
         git config --global user.email "actions@github.com"
         git config --global user.name "actions"
         ARIA2_VER=$(grep 'ARIA2_VER=' $GITHUB_WORKSPACE/dependences | cut -d'=' -f2)
-        git add . && git commit -m "$ARIA2_VER-$(date "+%Y%m%d")" && echo "更新完毕!!!" >> $GITHUB_STEP_SUMMARY || echo "暂无更新!!!" >> $GITHUB_STEP_SUMMARY
-
-    - name: Delete workflow runs
-      uses: GitRML/delete-workflow-runs@main
-      with:
-        retain_days: 3
-        keep_minimum_runs: 3
+        git add . && git commit -m "$ARIA2_VER-$(date "+%Y%m%d")" && git push && echo "更新完毕!!!" >> $GITHUB_STEP_SUMMARY || echo "暂无更新!!!" >> $GITHUB_STEP_SUMMARY
