--- a/.github/workflows/aria2-builer.yml
+++ b/.github/workflows/aria2-builer.yml
@@ -11,9 +11,8 @@ name: Aria2 Builder
 
 on:
   workflow_dispatch:
-  push:
-    tags:
-      - '*'
+  release:
+    types: [published]
   schedule:
     - cron: 10 2 * * 5
 
