--- a/.github/workflows/up.yml
+++ b/.github/workflows/up.yml
@@ -27,6 +27,8 @@ jobs:
 
     - name: Update
       id: compare
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         ./up.sh
         git config --global user.email "actions@github.com"
